--- a/style.css
+++ b/style.css
@@ -60,6 +60,16 @@ nav a {
     text-transform: uppercase;
 }
 
+nav ul li.logo:hover{
+    transform: scale(1.25);
+}
+nav ul li:hover{
+    transform: scale(1.1);
+}
+nav ul li a{
+    width: 100%;
+}
+
 ul {
     list-style: none;
 }
@@ -142,6 +152,9 @@ p {
 div img {
     width: 100%;
 }
+footer{
+    text-align: center;
+}
 
 #avatar {
     width: 50vw;
@@ -214,6 +227,9 @@ div img {
 
 .contact-form button:hover {
     background-color: #45a049;
+}
+.mt-2{
+    margin-top: 2em;
 }
 
 
