--- a/style.css
+++ b/style.css
@@ -166,6 +166,12 @@ footer{
     width: 100%;
 }
 
+.avatar {
+    width: 50vw;
+    max-width: 350px;
+    padding: 3rem 0;
+}
+
 .cta-button {
     display: inline-block;
     padding: 16px 28px;
