--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     color: #242424;
     font-family: 'Arvo';
+    scroll-behavior: smooth;
 }
 
 html {
@@ -15,7 +16,7 @@ header {
     top: 0;
 }
 
-nav ul{
+nav ul {
     display: grid;
     text-align: center;
     width: 100%;
@@ -24,7 +25,7 @@ nav ul{
     text-decoration: none;
 }
 
-nav ul li{
+nav ul li {
     background: #dfd214;
     color: #E8E8E8;
     min-height: 50px;
@@ -60,13 +61,15 @@ nav a {
     text-transform: uppercase;
 }
 
-nav ul li.logo:hover{
+nav ul li.logo:hover {
     transform: scale(1.25);
 }
-nav ul li:hover{
+
+nav ul li:hover {
     transform: scale(1.1);
 }
-nav ul li a{
+
+nav ul li a {
     width: 100%;
 }
 
@@ -139,20 +142,27 @@ section {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
+    text-align: center;
+    margin: 3rem auto;
+}
+
+h2 {
+    font-size: 2.25rem;
     text-align: center;
     margin: 3rem auto;
 }
 
 p {
     line-height: 1.5;
-    margin: 1rem auto;
+    margin: 1.75rem auto;
 }
 
 div img {
     width: 100%;
 }
-footer{
+
+footer {
     text-align: center;
 }
 
@@ -234,12 +244,59 @@ footer{
 .contact-form button:hover {
     background-color: #45a049;
 }
-.mt-2{
+
+.mt-2 {
     margin-top: 2em;
 }
 
+.carrousel {
+    max-height: 650px;
+}
 
-@media (min-width: 1250px) {
+.big.red {
+    font-size: 20px;
+    color: rgb(234, 8, 8);
+}
+
+/* Style the "bigger" span within the "big red" span */
+.big.red .bigger {
+    font-size: 30px;
+    font-weight: bold;
+    color: rgb(199, 0, 0)
+}
+
+
+@media (min-width: 700px) {
+    h1 {
+        font-size: 3.05rem;
+        text-align: center;
+        margin: 3rem auto;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+        text-align: center;
+        margin: 3rem auto;
+    }
+
+    section {
+        padding: 2.5em 25vw;
+    }
+}
+
+@media (min-width: 1100px) {
+    h1 {
+        font-size: 3.5rem;
+        text-align: center;
+        margin: 3rem auto;
+    }
+
+    h2 {
+        font-size: 2.75rem;
+        text-align: center;
+        margin: 3rem auto;
+    }
+
     section {
         padding: 2em 25vw;
     }
