--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav ul {
 }
 
 nav ul li {
-    background: #dfd214;
+    background: #efe00f;
     color: #E8E8E8;
     min-height: 50px;
     height: 8vh;
@@ -63,6 +63,7 @@ nav a {
 
 nav ul li.logo:hover {
     transform: scale(1.25);
+    font-weight: bolder;
 }
 
 nav ul li:hover {
@@ -185,8 +186,8 @@ footer {
 .cta-button {
     display: inline-block;
     padding: 16px 28px;
-    background-color: #4CAF50;
-    color: #eee;
+    background-color: #4ac54e;
+    color: #f5f5f5;
     font-weight: bold;
     text-decoration: none;
     border-radius: 5px;
@@ -194,6 +195,10 @@ footer {
     margin-top: 20px;
     letter-spacing: 2px;
     text-transform: capitalize;
+    transition: transform 250ms ease-in-out;
+}
+.cta-button:hover {
+    transform: scale(1.1);
 }
 
 /* CSS for the form */
