--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 html {
-    font-size: 12px;
+    font-size: 9px;
 }
 
 header {
@@ -272,6 +272,9 @@ footer {
 
 
 @media (min-width: 700px) {
+    html {
+        font-size: 12px;
+    }
     h1 {
         font-size: 3.05rem;
         text-align: center;
@@ -290,6 +293,9 @@ footer {
 }
 
 @media (min-width: 1100px) {
+    html {
+        font-size: 16px;
+    }
     h1 {
         font-size: 3.5rem;
         text-align: center;
